Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <h2>
 <a id="install-it" class="anchor" href="#install-it" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install it</h2>
 
-<p>Installation is simple:</p>
+<p>Installation is simple (BUT WILL ONLY WORK ON A PI2 OR PI3!!!):</p>
 
 <pre><code>wget -qO - http://bintray.com/user/downloadSubjectPublicKey?username=bintray | sudo apt-key add -
 echo "deb http://dl.bintray.com/kusti8/chromium-rpi jessie main" | sudo tee -a /etc/apt/sources.list
