Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@ sudo apt-get install chromium-browser rpi-youtube -y
 </code></pre>
 
 <p>If you already ran these instructions to install Chromium, there's no need to install it again.
-To update which should be done regularly:
-<code>run_omxplayer.py -U</code></p>
+To update which should be done regularly:</p>
+
+<pre><code>sudo apt-get update
+sudo apt-get dist-upgrade
+run_omxplayer.py -U
+</code></pre>
 
 <h2>
 <a id="how-does-it-work" class="anchor" href="#how-does-it-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How does it work?</h2>
